# event-service-gui

./: .flake8  .gitignore  Dockerfile  README.md  competition_format_individual_sprint.json  competition_format_individual_sprint_all_to_finals.json  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy_webserver.yml  test.yml
docs/: 00_index.md  01_architecture_overview.md  02_c4_context.md  ARCHITECTURE_AGENT_GUIDE.md  DELIVERY_SUMMARY.md  README.md  __init__.py  docs_agent.py
event_service_gui/: __init__.py  app.py  gunicorn_config.py
event_service_gui/adapters/: __init__.py  config_adapter.py  contestants_adapter.py  events_adapter.py  time_events_adapter.py
event_service_gui/config/: competition_format_individual_sprint.json  competition_format_individual_sprint_10.json  competition_format_individual_sprint_all_to_finals.json  competition_format_individual_sprint_steinar.json  competition_format_interval_start.json  competition_format_sprint_steinar2.json  sports_clubs.json
event_service_gui/services/: __init__.py  competition_format_adapter.py  config_adapter.py  contestants_adapter.py  events_adapter.py  raceclass_result_adapter.py  raceclasses_adapter.py  raceplans_adapter.py  start_adapter.py  status_adapter.py  time_events_adapter.py  time_events_service.py  user_adapter.py
event_service_gui/static/: styles.css  styles_kjelsaas.css  styles_lyn.css  styles_print.css
event_service_gui/static/data/: test_deltakerliste_sportsadmin.csv  test_excel_manual1314.csv  test_seeding_manual.csv
event_service_gui/templates/: adm_base.html  contestants.html  control.html  events.html  index.html  login.html  open_base.html  open_base_new.html  print_contestants.html  raceclasses.html  raceplan_edit.html  raceplans.html  seeding.html  settings.html  tasks.html  users.html
event_service_gui/views/: __init__.py  contestants.py  control.py  csv.py  csv_list.py  dashboard.py  events.py  liveness.py  login.py  main.py  print_contestants.py  raceclasses.py  raceplans.py  seeding.py  settings.py  start_edit.py  tasks.py  users.py  utils.py
src/event_service_gui/: app.py
src/event_service_gui/services/: __init__.py  contestants_adapter.py  events_adapter.py  login_adapter.py  raceclasses_adapter.py  raceplans_adapter.py  schedules_adapter.py  user_adapter.py
src/event_service_gui/static/: styles.css  styles_lyn.css
src/event_service_gui/templates/: adm_base.html  contestants.html  dashboard.html  events.html  index.html  login.html  raceclasses.html  raceplans.html  schedules.html  settings.html  tasks.html  users.html
src/event_service_gui/views/: __init__.py  contestants.py  dashboard.py  events.py  innstillinger.py  login.py  logout.py  main.py  raceclasses.py  raceplans.py  schedules.py  settings.py  tasks.py  users.py  utils.py  utils_xml.py
src/webserver/: app.py
src/webserver/static/: styles.css
src/webserver/templates/: adm_base.html  index.html  innstillinger.html
src/webserver/views/: __init__.py  innstillinger.py  main.py
tests/: conftest.py
tests/contract/: test_live.py  test_ping.py
tests/integration/: test_main.py
