[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Heming Harnæs <heming.harnaes@gmail.com"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "Webserver serving startlists and results"
homepage = "https://github.com/langrenn-sprint"
license = "Apache-2.0"
name = "event-service-gui"
readme = "README.md"
repository = "https://github.com/langrenn-sprint/event-service-gui"
version = "0.1.0"
[tool.poetry.dependencies]
PyJWT = "^2.1.0"
aiohttp = "^3.7.2"
aiohttp-jinja2 = "^1.5"
aiohttp-session = "^2.9.0"
aioresponses = "^0.7.2"
cryptography = "^3.4.8"
gunicorn = "^20.0.4"
jwt = "^1.2.0"
motor = "^2.3.0"
multidict = "^5.1.0"
python = "^3.7  "
requests = "^2.25.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^0.13.1"
aioresponses = "^0.7.2"
codecov = "^2.1.10"
coverage = {extras = ["toml"], version = "^5.3"}
docker-compose = "^1.27.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
pytest = "^6.1.1"
pytest-aiohttp = "^0.3.0"
pytest-docker = "^0.10.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.3.1"
safety = "^1.9.0"
black = "^21.12b0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
mypy = "^0.920"

[tool.coverage.paths]
source = ["event_service_gui", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py"]
source = ["event_service_gui"]

[tool.coverage.report]
fail_under = 17
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
