[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Heming Harnæs <heming.harnaes@gmail.com"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "Webserver serving startlists and results"
homepage = "https://github.com/langrenn-sprint"
license = "Apache-2.0"
name = "event-service-gui"
readme = "README.md"
repository = "https://github.com/langrenn-sprint/event-service-gui"
version = "1.1.0"

[tool.poetry.dependencies]
PyJWT = "^2.1.0"
aiohttp = "^3.8.1"
aiohttp-jinja2 = "^1.5"
aiohttp-session = "^2.9.0"
aioresponses = "^0.7.2"
cryptography = "^38"
gunicorn = "^20.0.4"
jwt = "^1.2.0"
motor = "^3"
multidict = "^6"
python = ">=3.7,<3.11"
requests = "^2.28.1"
python-dotenv = "^0.21"
click = "^8.1.3"
flake8-bugbear = "^22.7.1"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^1"
aioresponses = "^0.7.2"
codecov = "^2.1.10"
coverage = "^6.0.2"
docker-compose = "^1.29"
flake8-annotations = "^2.4.1"
flake8-bandit = "^4"
flake8-black = "^0.3"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-docker = "^1.0.0"
pytest-mock = "^3.3.1"
safety = "^2.2"
black = "^22.1.0"
flake8 = "^5"
pep8-naming = "^0.13"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
mypy = "^0.982"

[tool.coverage.paths]
source = ["event_service_gui", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py"]
source = ["event_service_gui"]

[tool.coverage.report]
fail_under = 10
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0"]
